<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView
    	android:id="@+id/textView1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" android:text="@string/brand">
    </TextView>
    
    <EditText 
    	android:singleLine="true"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" android:id="@+id/EditTextBrand">
    </EditText>
    
    <TextView
    	android:id="@+id/textView2"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" android:text="@string/model">
    </TextView>
    
    <EditText 
    	android:singleLine="true" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" android:id="@+id/EditTextModel">
    </EditText>
    
    <TextView 
	    android:id="@+id/textView3" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" android:text="@string/plate">
    </TextView>
    
    <EditText 
		android:singleLine="true" 
    	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" android:id="@+id/EditTextPlate">
    </EditText>
    
    <TextView 
	    android:id="@+id/textView4" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" android:text="@string/quilometragem_atual">
    </TextView>
    
    <EditText 
	    android:singleLine="true" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" android:id="@+id/EditTextCurrentKm"></EditText>
    
    <TextView
    	android:id="@+id/textView5"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" android:text="@string/volume_inicial_tanque">
    </TextView>
    
    <EditText
    	android:layout_width="fill_parent"
    	android:singleLine="true"
    	android:layout_height="wrap_content" android:id="@+id/editTextCurrentVolume">
    	
        <requestFocus></requestFocus>
    </EditText>
    
    <Button 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" android:id="@+id/buttonSave" android:text="@string/salvar">
    </Button>
    
</LinearLayout>
