<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    
	<TextView android:id="@+id/textView1" 
			  android:text="@string/preco_alcool" 
			  android:layout_width="fill_parent" 
			  android:layout_height="wrap_content"></TextView>
	
	<EditText android:layout_width="fill_parent" 
			  android:layout_height="wrap_content"
			  android:id="@+id/editTextPrecoAlcool"
			  android:singleLine="true"
			  android:numeric="decimal"
			  android:digits="0123456789."
			  android:inputType="numberDecimal"
			  android:maxLength="5"></EditText>
	
	<TextView android:id="@+id/textView2" 
			  android:layout_height="wrap_content" 
			  android:layout_width="fill_parent" 
			  android:text="@string/preco_gasolina"></TextView>
	
	<EditText android:layout_width="fill_parent" 
			  android:layout_height="wrap_content" 
			  android:id="@+id/editTextPrecoGasolina"
			  android:singleLine="true"
			  android:numeric="decimal"
			  android:digits="0123456789."
			  android:inputType="numberDecimal"
			  android:maxLength="5"></EditText>
	
	<Button android:text="@string/calcular" 
			android:layout_height="wrap_content" 
			android:id="@+id/buttonCalcular" 
			android:layout_width="110dp"></Button>    
    
</LinearLayout>
