<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <RelativeLayout android:id="@+id/relativeLayout1" 
    				android:layout_width="fill_parent"
    				android:layout_height="wrap_content">
    				
        <TextView android:id="@+id/textView1"
        		  android:layout_centerVertical="true"
        		  android:layout_height="wrap_content"
        		  android:text="@string/plate"
        		  android:layout_alignParentLeft="true"
        		  android:layout_width="wrap_content"></TextView>
        
        <LinearLayout android:orientation="vertical"
        			  android:id="@+id/linearLayout1"
        			  android:layout_width="wrap_content"
        			  android:layout_height="wrap_content"
        			  android:layout_alignParentTop="true"
        			  android:layout_alignParentRight="true"
        			  android:layout_marginRight="116dp">
        			  
            <TextView android:id="@+id/textView2"
            		  android:layout_height="wrap_content"
            		  android:text="@string/brand"
            		  android:layout_width="wrap_content"></TextView>
            		  
            <TextView android:id="@+id/textView3"
            		  android:layout_height="wrap_content"
            		  android:layout_width="wrap_content"
            		  android:text="@string/model"></TextView>
        
        </LinearLayout>
        
    </RelativeLayout>
    
</LinearLayout>
